<resources>
    <string name="app_name">givr</string>
    <string name="welcome_text">Welcome, User!</string>
    <string name="copyright_text">2018, Gaggle Inc.</string>

    <string name="login_button">Log In</string>
    <string name="signup_button">Sign Up</string>
    <string name="reset_button">Reset</string>

    <string name="email_field"><font size="14">Email</font></string>
    <string name="password_field"><font size="14">Password</font></string>
    <string name="forgot_password_text">Forgot password?</string>

    <string-array name="user_type">
        <item>User</item>
        <item>Admin</item>
    </string-array>
    <string name="title_activity_item_list_page">ItemListPage</string>
    <string name="title_activity_new_item_page">newItemPage</string>
    <string name="title_activity_add_item_page">AddItemPage</string>
    <string name="title_activity_item_search">ItemSearchActivity</string>
    <string name="title_activity_maps">Map</string>
</resources>
